[Fix] Spring 4·Java 21 전환 및 Docker 개발 환경 설정 오류 전반 수정
- Spring 4 / Java 21 전환에 따라 Gradle 및 주요 라이브러리 의존성 호환성 수정
- MySQL Connector 버전 정합성 조정
- Docker 기반 개발 환경 구성 정리
  - 로컬 개발용(MySQL, Redis) docker-compose 파일 분리
  - 백엔드 실행/배포 환경용 docker-compose-back-dev 파일 분리
- Docker MySQL 인증 오류 원인 분석 및 계정/초기화 방식 정리
- 개발 환경에서 .env 기준으로 datasource 설정 정합성 확보
- Google Speech 기능을 프로파일(dev/prod) 기준으로 분리하여 로컬 실행 오류 방지

--- a/Banchan/src/main/resources/application.yml
+++ b/Banchan/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
   application:
     name: Banchan # 애플리케이션 이름 설정
   
-  http:
-    encoding:
-      charset: UTF-8
-      enabled: true
-      force: true
+#  http:
+#    encoding:
+#      charset: UTF-8
+#      enabled: true
+#      force: true
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver # MySQL JDBC 드라이버 클래스 이름
@@ -70,3 +70,4 @@ chatgpt:
   top-p: 1.0
   media-type: application/json; charset=UTF-8
   url: https://api.openai.com/v1/chat/completions
+
